tests/diagnostics_golden/diag_use_after_move.txt
Diagnostics Golden: Use After Move
Source: tests/negative/neg_own_use_after_move.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_use_after_move.safe:18:11: error: dereference of moved reference
  |
  | 18 |       v = source.count  -- ERROR: dereference of moved variable
  |    |           ^~~~~~~~~~~~
  |
  note: the reference value was moved before this dereference.
  note: rule: D27 Rule 4 (Not-Null Dereference)
------------------------------------------------------------------------
